--- a/index.html
+++ b/index.html
@@ -7,26 +7,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Estonia&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="font-awesome.css"> -->
     <title>To Do List</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <div class="clear">
-                <i class="fa fa-refresh" aria-hidden="true"></i>
-            </div>
-            <div id="date"></div>
+            <span class="header-title">Hey, <br> Have a nice day!</span>
         </div>
         <div class="content">
+            <div class="date-clear">
+                <div id="date"></div> 
+                <div class="clear">
+                    <i class="fa fa-refresh" aria-hidden="true"></i>
+                </div>
+            </div>            
             <ul id="list">
-
             </ul>
         </div>
         <div class="add-to-do">
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <input type="text" id="input" placeholder="add a to-do">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            <input type="text" id="input" placeholder="Add a ToDo...">
         </div>
     </div>
 
